--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </head>
 <body>
 
-<h1>Fresh Prince of Bel Air Lyrics</h1>
-<h2>Becuase why not?</h2>
+<h1><center>Fresh Prince of Bel Air Lyrics</center></h1>
+<h2><center>Becuase why not?</center></h2>
 
 <p>This is a story, all about how, my life got flipped, turned upside down<br>
 And I'd like to take a minute<br>
