--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <head>
-  <style>
-body  {
-  background-image: url("https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjqqNScpvHiAhUSX60KHQPVDZ8QjRx6BAgBEAU&url=https%3A%2F%2Fwww.pinterest.es%2Fpin%2F383228249540316766%2F&psig=AOvVaw1ArjBbtLH0ey0zqDXBk7u0&ust=1560887649970255");
-  background-color: #cccccc;
-}
-</style>
 <title>Page Title</title>
 </head>
 <body>
 
 <h1><center>Fresh Prince of Bel Air Lyrics</center></h1>
-<h2><center>Becuase why not?</center></h2>
+<h2><center>A totally original website idea</center></h2>
 
 <p>This is a story, all about how, my life got flipped, turned upside down<br>
 And I'd like to take a minute<br>
